--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <style>
             body,
             html {
-                background-image: url("../assets/img/background.jpeg");
+                /* background-image: url("../assets/img/background.jpeg"); */
                 height: 100%;
                 background-position: center;
                 background-repeat: no-repeat;
