--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8"/>
+        <meta charset="utf-8" />
         <title>Areito</title>
-        <base href="/"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
-        <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
+        <base href="/" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#1976d2" />
+
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png" />
+        <link rel="manifest" href="manifest.webmanifest" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JTP06VJ4V2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-JTP06VJ4V2");
+        </script>
+
+        <!-- Youtube -->
+        <script src="https://apis.google.com/js/platform.js"></script>
+
         <style>
             body,
             html {
-                background-image: url("../assets/img/background.jpg");
-                height: 100%;
+                min-height: 100%;
+            }
+
+            body {
+                background-image: url("../assets/img/background-blanco.jpg");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
             }
         </style>
-      <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
+    </head>
     <body class="bg">
         <app-root></app-root>
-      <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
+        <noscript>Please enable JavaScript to continue using this application.</noscript>
+
+        <!-- Facebook -->
+        <div id="fb-root"></div>
+        <script
+            async
+            defer
+            crossorigin="anonymous"
+            src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v10.0&appId=166360508672619&autoLogAppEvents=1"
+            nonce="Jku4idXM"
+        ></script>
+    </body>
 </html>
