--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,11 @@
     </head>
     <body class="bg">
         <app-root></app-root>
+
+        <!-- <footer>
+            <span>Developed by <a href="https://www.linkedin.com/in/juanpablomarinjimenez/" target="_blank">Juan Pablo Marín</a></span>
+        </footer> -->
+
         <noscript>Please enable JavaScript to continue using this application.</noscript>
 
         <!-- Facebook -->
