No scroll if menu open

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,17 @@
                 background-repeat: no-repeat;
                 background-size: cover;
             }
+
+            body.menu-open {
+                overflow: hidden;
+            }
         </style>
     </head>
-    <body class="bg">
+    <body>
         <app-root></app-root>
 
         <noscript>Please enable JavaScript to continue using this application.</noscript>
-
+    
         <!-- Facebook -->
         <div id="fb-root"></div>
         <script
