--- a/src/index.html
+++ b/src/index.html
@@ -30,13 +30,7 @@
             body,
             html {
                 min-height: 100%;
-            }
-
-            body {
-                background-image: url("../assets/img/background-blanco.jpg");
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
+                overflow-x: hidden;
             }
 
             body.menu-open {
