google fonts roboto installed

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1976d2" />
 
+        <!-- Font -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
+
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png" />
         <link rel="manifest" href="manifest.webmanifest" />
@@ -25,18 +29,6 @@
 
         <!-- Youtube -->
         <script src="https://apis.google.com/js/platform.js"></script>
-
-        <style>
-            body,
-            html {
-                min-height: 100%;
-                overflow-x: hidden;
-            }
-
-            body.menu-open {
-                overflow: hidden;
-            }
-        </style>
     </head>
     <body>
         <app-root></app-root>
