--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8"/>
         <title>Areito</title>
-        <base href="/" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#1976d2" />
+        <base href="/"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="theme-color" content="#1976d2"/>
 
         <!-- Font -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&amp;display=swap" rel="stylesheet">
 
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
-        <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png" />
-        <link rel="manifest" href="manifest.webmanifest" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png"/>
+        <link rel="manifest" href="manifest.webmanifest"/>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JTP06VJ4V2"></script>
+        <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-JTP06VJ4V2"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
@@ -26,8 +26,11 @@
 
             gtag("config", "G-JTP06VJ4V2");
         </script>
-    </head>
+      <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+</head>
     <body>
         <app-root></app-root>
-    </body>
+      <noscript>Please enable JavaScript to continue using this application.</noscript>
+</body>
 </html>
